<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/flourishing"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/fl_point"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/flourishing_a_480"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/fl_plain"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/flourishing_b_orignal"/>



    </LinearLayout>

</ScrollView>