<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/flourishing_des"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/fl_point"
            android:textColor="@color/colorPrimaryText" />

        <ImageView
            android:id="@+id/flourishing_image_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:scaleType="centerCrop"
            android:src="@drawable/flourishing_a_480" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/fl_plain"
            android:textColor="@color/colorPrimaryText" />

        <ImageView
            android:id="@+id/flourishing_image_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:scaleType="centerCrop"
            android:src="@drawable/flourishing_b_orignal" />

    </LinearLayout>

</ScrollView>