<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_border_color_black_36dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/italy_tip_1"
                    android:textColor="@color/colorPrimaryText" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_border_color_black_36dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/italy_tip_2"
                    android:textColor="@color/colorPrimaryText" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_border_color_black_36dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/italy_tip_3"
                    android:textColor="@color/colorPrimaryText" />

                <ImageView
                    android:id="@+id/italic_tip_3_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/italy_f_640" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_border_color_black_36dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/italy_tip_4"
                    android:textColor="@color/colorPrimaryText" />

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/italy_tip_4_a"
                    android:textColor="@color/colorPrimaryText" />

                <ImageView
                    android:id="@+id/italic_tip_4_a_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/italy_tip_4_a_480" />

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/italy_tip_4_b"
                    android:textColor="@color/colorPrimaryText" />

                <ImageView
                    android:id="@+id/italic_tip_4_b_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/italy_tip_4_b_480" />

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/italy_tip_4_c"
                    android:textColor="@color/colorPrimaryText" />

                <ImageView
                    android:id="@+id/italic_tip_4_c_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/italy_tip_4_c_480" />

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/italy_tip_4_d"
                    android:textColor="@color/colorPrimaryText" />

                <ImageView
                    android:id="@+id/italic_tip_4_d_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/italy_tip_4_d_480" />

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/italy_tip_4_e"
                    android:textColor="@color/colorPrimaryText" />

                <ImageView
                    android:id="@+id/italic_tip_4_e_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/italy_tip_4_e_480" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>